@@ -1,3 +1,9 @@
+2003-03-02  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* FvwmButtons/FvwmButtons.c (Loop):
+	(SetTransparentBackground):
+	Fixed FvwmButtons transparency
+
 2003-02-01  Dan Espen  <dane@mk.telcordia.com>
 
 	* FvwmTaskBar/FvwmTaskBar.1: Typos.
